# docs/api.yaml
@@ -77,6 +77,55 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  
+  /api/sales-points/near-me:
+    get:
+      summary: Obtener los 3 puntos de venta más cercanos
+      tags:
+        - Sales Points
+      parameters:
+        - name: lat
+          in: query
+          required: true
+          description: Latitud de la ubicación actual
+          schema:
+            type: number
+            minimum: -90
+            maximum: 90
+          example: -16.500093
+
+        - name: long
+          in: query
+          required: true
+          description: Longitud de la ubicación actual
+          schema:
+            type: number
+            minimum: -180
+            maximum: 180
+          example: -68.133203
+
+      responses:
+        '200':
+          description: Lista de los puntos de venta más cercanos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NearestPointsSellResponse'
+
+        '400':
+          description: Parámetros inválidos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 
   /api/sales-points/{id}:
     get:
@@ -803,3 +852,34 @@ components:
           example: Availability statistics retrieved successfully
         data:
           $ref: '#/components/schemas/AvailabilityStatistics'
+    NearestPointSell:
+      type: object
+      properties:
+        pointSell:
+          $ref: '#/components/schemas/PointSell'
+
+        distance:
+          type: number
+          description: Distancia de la ruta en metros
+          example: 3033
+
+        duration:
+          type: number
+          description: Duración estimada en segundos
+          example: 308.4
+
+    NearestPointsSellResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          example: true
+
+        message:
+          type: string
+          example: "Nearest points of sale retrieved successfully"
+
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/NearestPointSell'
